Before removing arrival